--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,36 @@ body {
   font-family: sans-serif;
 }
 
-div.square {
-  height: 20px;
-  width: 20px;
-  background: #fefefe;
-  display: inline-block;
-  border: 1px solid orange;
+.app-container {
+  margin: 0 auto;
+  text-align: center;
 }
 
+button {
+  padding: 8px 16px;
+  font-size: 18px;
+  display: inline-block;
+  margin-bottom: 30px;
+}
+
+.board {
+  margin: 0;
+  padding: 0;
+}
+
+.row {
+  line-height: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.square {
+  background: #ddd;
+  display: inline-block;
+  height: 12px;
+  width: 12px;
+}
 
 .square.on {
-  background: #ddd;
+  background: #fff;
 }
